<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Inicio"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/navV_menu_Inicio" />
        <item
            android:id="@+id/nav_Crear"
            android:icon="@drawable/ic_baseline_create_new_folder_24"
            android:title="@string/menu_Create" />
        <item
            android:id="@+id/nav_Consultas"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_Query" />
        <item
            android:id="@+id/nav_Actualizar"
            android:icon="@drawable/ic_baseline_update_24"
            android:title="@string/menu_Update" />
    </group>
</menu>