<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_Inicio">

    <fragment android:id="@+id/nav_Inicio"
        android:name="com.example.incidencias_sem.ui.inicio.StartFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_start"/>

    <fragment
        android:id="@+id/nav_Crear"
        android:name="com.example.incidencias_sem.ui.create.CreateFragment"
        android:label="@string/menu_Create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_Consultas"
        android:name="com.example.incidencias_sem.ui.query.QueryFragment"
        android:label="@string/menu_Query"
        tools:layout="@layout/fragment_query" />

    <fragment
        android:id="@+id/nav_Actualizar"
        android:name="com.example.incidencias_sem.ui.update.UpdateFragment"
        android:label="@string/menu_Update"
        tools:layout="@layout/fragment_update" />



</navigation>