<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/copia_emergencies_mediques">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Hguide90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_olvidar_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        app:layout_constraintBottom_toTopOf="@id/main_Hguide90"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_registrate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/main_registro"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_lightColor"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_person_add_alt_1_24"
        app:layout_constraintBottom_toTopOf="@id/main_olvidar_password"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/main_login"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_lightColor"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_login_24"
        app:layout_constraintBottom_toTopOf="@id/main_btn_registrate"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/main_pass"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/main_btn_login"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_password"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/main_username"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/color_surface"
        app:layout_constraintBottom_toTopOf="@id/main_til_password"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/main_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/ic_expocom_blue_2_round"


        app:layout_constraintBottom_toTopOf="@id/main_til_user"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
