<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/expocom_2"
    tools:context=".ui.create.CreateFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Hguide90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:id="@+id/llcreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@+id/main_Vguide10"
        app:layout_constraintTop_toBottomOf="@id/main_Hguide90">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_create_btn_crear"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/fragment_create"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary_lightColor"
            app:cornerRadius="15dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_estado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/llcreate"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10" />

    <Spinner
        android:id="@+id/spinner_averia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/spinner_estado"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10" />

    <Spinner
        android:id="@+id/spinner_equipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/spinner_averia"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_til_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/fragment_create_location"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/spinner_equipo"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_tie_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_til_callSign"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/fragment_create_callSign"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/spinner_equipo"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_tie_callSign"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_til_ISSI"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/fragment_create_ISSI"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/fragment_til_location"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_tie_ISSI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_til_incidence"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/fragment_create_incidence_tie"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_primary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/fragment_til_ISSI"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_tie_incidence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>